<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/dffff"
    android:id="@+id/id1234"
    >
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="284dp"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif"
            android:text="@string/Welcome"
            android:textAlignment="center"
            android:textColor="#FF8F00"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">


        <Button
            android:id="@+id/button"
            android:layout_width="156dp"
            android:layout_height="63dp"
            android:layout_gravity="center"

            android:layout_marginTop="75dp"
            android:background="@drawable/button"
            android:text="@string/regis"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="157dp"
            android:layout_height="67dp"

            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>